k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-backend
  namespace: quiz-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-backend
  template:
    metadata:
      labels:
        app: quiz-backend
    spec:
      containers:
        - name: quiz-backend
          image: atakowiec/k8s-quiz:backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
