k8s/img-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-server
  namespace: quiz-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-server
  template:
    metadata:
      labels:
        app: image-server
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: images
              mountPath: /usr/share/nginx/html/content
      volumes:
        - name: images
          hostPath:
            path: /root/quiz-app/k8s/images
            type: Directory
