k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-ingress
  namespace: quiz-app
spec:
  rules:
    - host: api.cieszczyk.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quiz-backend
                port:
                  number: 3000
    - host: quiz.cieszczyk.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quiz-frontend
                port:
                  number: 5173
    - host: database.cieszczyk.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 80
    - host: img.cieszczyk.pl
      http:
        paths:
          - path: /content
            pathType: Prefix
            backend:
              service:
                name: image-server
                port:
                  number: 80
